--- a/index.html
+++ b/index.html
@@ -1,83 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Nirajan | Home</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, Helvetica, sans-serif;
-    }
+    <meta charset="UTF-8">
+    <title>Nirajan | Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+        }
 
-    body {
-      height: 100vh;
-     
-      color: white;
-      display: flex;
-      flex-direction: column;
-    }
+        header {
+            background-color: #222;
+            padding: 15px 0;
+            text-align: center;
+        }
 
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 40px;
-      background: rgba(0, 0, 0, 0.7);
-    }
+        header a {
+            color: white;
+            text-decoration: none;
+            margin: 0 20px;
+            font-weight: bold;
+        }
 
-    header h2 {
-      font-weight: bold;
-    }
+        header a:hover {
+            text-decoration: underline;
+        }
 
-    nav a {
-      text-decoration: none;
-      color: white;
-      padding: 10px 18px;
-      border-radius: 5px;
-      transition: 0.3s;
-      background: #007bff;
-    }
+        main {
+            text-align: center;
+            margin-top: 100px;
+        }
 
-    nav a:hover {
-      background: #0056b3;
-    }
+        h1 {
+            font-size: 32px;
+            color: #333;
+        }
 
-    main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-
-    main h1 {
-      font-size: 3rem;
-      margin-bottom: 20px;
-    }
-
-    main p {
-      font-size: 1.2rem;
-      opacity: 0.9;
-    }
-  </style>
+        p {
+            font-size: 18px;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
 
-  <header>
-    <h2>Nirajan</h2>
-    <nav>
-      <a href="invoice.html">INVOICE</a>
-    </nav>
-  </header>
+<header>
+    <a href="index.html">HOME</a>
+    <a href="invoice.html">INVOICE</a>
+</header>
 
-  <main>
-    <h1>Hi, it’s my Nirajan 👋</h1>
-    <p>The site is currently being developed.</p>
-  </main>
+<main>
+    <h1>Hi, it's me Nirajan 👋</h1>
+    <p>The site is being constructed.</p>
+</main>
 
 </body>
 </html>
